--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "node prisma/seed.mjs"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
@@ -26,7 +27,7 @@
     "lucide-react": "^0.539.0",
     "mongodb": "^6.18.0",
     "next": "15.4.6",
-    "next-auth": "^5.0.0-beta.29",
+    "next-auth": "^4.24.11",
     "next-cloudinary": "^6.16.0",
     "react": "19.1.0",
     "react-calendar": "^6.0.0",
